# kansei

./: .gitmodules  CMakeLists.txt  README.md  build_helper.sh  compile_flags.txt  vcs_helper.sh
res/: default.frag  default.vert
src/: Main.cpp  main.c  main.cpp
src/core/: Application.cpp  Application.hpp
